manifests/cluster-addons/jellyfin/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  endpointSelector: {}

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: tailscale
            tailscale.com/parent-resource: jellyfin
            tailscale.com/parent-resource-ns: jellyfin
      toPorts:
        - rules:
            http: []
          ports:
            - port: '8096'
              protocol: TCP

  egress:
    - toEntities:
        - world
